Nodes: Boolean sockets with "Single Value Only" enabled inside modifier panels still have option to choose attribute until area is redrawn #116515

Closed
opened 2023-12-24 13:45:02 +01:00 by Nika Kutsniashvili · 6 comments
Contributor

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.42

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-24 07:18, hash: 2794afc84e15
Worked: blender-4.1.0-alpha+main.7c423682bc1f-windows.amd64-release

Short description of error
In new modifier panels, if you have boolean socket with Single Value only enabled, sometimes it still has attribute icon when first added, and only after couple of opening-closings does it get removed.

Exact steps for others to reproduce the error
Its gonna be hard because some boolean sockets act correctly, but some dont, so I dont know how easily it can be recreatable. But for sockets that have this issue it happens on every single time.

  • Open attached file, Use Camera Culling is single value socket
  • If transform panel is expanded in modifiers tab, attribute icon is drawn next to Use Camera Culling
  • Collapsing transform panel will remove the attribute icon

video
boolean_socket.blend

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.42 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-24 07:18, hash: `2794afc84e15` Worked: blender-4.1.0-alpha+main.7c423682bc1f-windows.amd64-release **Short description of error** In new modifier panels, if you have boolean socket with Single Value only enabled, sometimes it still has attribute icon when first added, and only after couple of opening-closings does it get removed. **Exact steps for others to reproduce the error** Its gonna be hard because some boolean sockets act correctly, but some dont, so I dont know how easily it can be recreatable. But for sockets that have this issue it happens on every single time. - Open attached file, `Use Camera Culling` is single value socket - If `transform` panel is expanded in modifiers tab, attribute icon is drawn next to `Use Camera Culling` - Collapsing `transform` panel will remove the attribute icon [video](https://i.imgur.com/TCBG9rN.mp4) [boolean_socket.blend](https://projects.blender.org/attachments/716aa24b-a27c-4471-831d-cca91a4cd265)
Nika Kutsniashvili added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-12-24 13:45:02 +01:00
Author
Contributor

I dont know how to make videos smaller sorry

I dont know how to make videos smaller sorry

Can't confirm from scratch.

Can't confirm from scratch.
Iliya Katushenock added the
Interest
Geometry Nodes
Interest
Nodes & Physics
labels 2023-12-24 17:53:43 +01:00
Member

Unable to confirm either. Can you share .blend file from asset library which has this node tree asset?

Unable to confirm either. Can you share .blend file from asset library which has this node tree asset?
Pratik Borhade added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-12-27 12:12:04 +01:00
Author
Contributor

@PratikPB2123 here's a blend file with modifier. You can mark it as asset and try adding in different blend file if you cant reproduce here.

When every panel is opened, booleans are drawn correctly. Meaning if its marked as Single Value Only attribute icon doesnt appear. Sometimes even if one custom panel is closed, it shows attribute icon and ignores "Single Value Only". But sometimes even just opening and closing panels randomly.

https://imgur.com/a/Bj933VZ

@PratikPB2123 here's a blend file with modifier. You can mark it as asset and try adding in different blend file if you cant reproduce here. When every panel is opened, booleans are drawn correctly. Meaning if its marked as Single Value Only attribute icon doesnt appear. Sometimes even if one custom panel is closed, it shows attribute icon and ignores "Single Value Only". But sometimes even just opening and closing panels randomly. https://imgur.com/a/Bj933VZ

Still can not reproduce. But now here is such errors:

WARN (bpy.rna): F:\Blender_build\first\blender\source\blender\python\intern\bpy_rna.cc:1349 pyrna_enum_to_py: current value '15' matches no enum in 'NodeTreeInterfaceSocketFloatFactor', 'Density', 'socket_type'
WARN (bpy.rna): F:\Blender_build\first\blender\source\blender\python\intern\bpy_rna.cc:1349 pyrna_enum_to_py: current value '4' matches no enum in 'NodeTreeInterfaceSocketVectorEuler', 'Rotation', 'socket_type'

So this bug looks like #116477.

Still can not reproduce. But now here is such errors: ``` WARN (bpy.rna): F:\Blender_build\first\blender\source\blender\python\intern\bpy_rna.cc:1349 pyrna_enum_to_py: current value '15' matches no enum in 'NodeTreeInterfaceSocketFloatFactor', 'Density', 'socket_type' WARN (bpy.rna): F:\Blender_build\first\blender\source\blender\python\intern\bpy_rna.cc:1349 pyrna_enum_to_py: current value '4' matches no enum in 'NodeTreeInterfaceSocketVectorEuler', 'Rotation', 'socket_type' ``` So this bug looks like #116477.
Member

Thanks @nickberckley . I can confirm. Guess this came up with panel integration in modifiers tab: ad7a5abb2d

@JacquesLucke ^

Thanks @nickberckley . I can confirm. Guess this came up with panel integration in modifiers tab: ad7a5abb2da15563bfd61c455421b82b5c400f75 @JacquesLucke ^
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-09 11:01:33 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116515
No description provided.