Fix #116515: Single Value Only applies to wrong input in geometry nodes modifier

The counting of input sockets did not take closed panels into account correctly.